--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "next": "^15.0.0",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
-    "react-day-picker": "^9.0.0-rc.6",
+    "react-datepicker": "^8.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.43.9",
