--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-table": "^8.10.3",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
@@ -33,6 +34,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.6.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "next": "^15.0.0",
@@ -44,7 +46,9 @@
     "react-hook-form": "^7.43.9",
     "react-icon": "^1.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
@@ -57,6 +61,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/redux-persist": "^4.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4",
